fix spacing, fix buttons

--- a/src/colors.styl
+++ b/src/colors.styl
@@ -10,6 +10,7 @@ $warning    = #F2C037
 $tertiary   = #FF9800
 $quaternary = #8BC34A
 $abracadabraBro   =rgb(186, 33, 224)
+$backgroundLight  = #FFFFFF
 
 .bg-tertiary
   background: $tertiary !important
@@ -28,4 +29,10 @@ $abracadabraBro   =rgb(186, 33, 224)
 
 .text-abracadabra-bro
   color: $abracadabraBro !important
+
+.bg-background-light
+  background: $backgroundLight !important
+
+.text-background-light
+  color: $backgroundLight !important
 
